changed the first visible page to have the correct inputs and buttons

--- a/css/index.css
+++ b/css/index.css
@@ -106,11 +106,11 @@ input {
   /*End imported css code*/
 }
 
-#matchingMoviesButton {
+#newAcctButton {
   width: 50%;
 }
 
-#allMoviesButton {
+#signInButton {
   width: 40%;
 }
 
